--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cache-off-ecs-lambda",
   "version": "0.1.0",
   "bin": {
-    "cache-off-ecs-lambda": "bin/cache-off-ecs-lambda.js"
+    "cache-off-ecs-lambda": "infra/bin/cache-off-ecs-lambda.js"
   },
   "scripts": {
     "build": "tsc",
@@ -13,14 +13,15 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.14.2",
+    "aws-cdk": "2.147.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.4",
-    "aws-cdk": "2.147.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
   },
   "dependencies": {
     "aws-cdk-lib": "2.147.0",
+    "cargo-lambda-cdk": "^0.0.22",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
